--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ludo</title>
+  <script type="module" src="main.js" defer></script>
   <!-- <style>
       table{
         border-collapse: collapse;
@@ -13,8 +14,7 @@
 </head>
 
 <body>
-  <table border="1" style="width:30%; border-collapse: collapse;" >
-    <caption>Ludo board design</caption>
+  <table border="1" style="width:30%; border-collapse: collapse;" id="tableId" >   
     <tr style="height:20px"> <!-- first row-->
       <td colspan="6" bgcolor="red" style="border: none;"></td>
       <td style="width: 15px;"></td>
@@ -165,6 +165,26 @@
       <td colspan="6" bgcolor="green" style="border: none;"></td>
     </tr>
   </table>
+  <div id="diceRoll" style="
+  background-color: rgb(236, 228, 212);
+  border-radius: 26px;
+  display: flex;
+  flex-direction: column;
+  width: 14%;
+  margin: 13px 26px 0px 95px;
+  text-align: center;">
+   <p><span id="playerNo" ></span> Players turn. </p>
+   <span id="outPut" style="font-size: x-large;"></span> 
+   <button id="dice" style="background-color: black;
+   border-radius: 17px;
+   color: white;
+   width: 37%;
+   padding: 4px;
+   margin-left: 62px;
+   margin-bottom: 13px;
+   font-size: 20px;
+   font-style: normal;">Dice</button>
+  </div>
 </body>
 
 </html>
