modified main.js file and added style.css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ludo</title>
-  <script type="module" src="main.js" defer></script>
+  <link rel="stylesheet" href="style.css">
+  <script type="module" src="main.js" async></script>
   <!-- <style>
       table{
         border-collapse: collapse;
@@ -173,7 +174,7 @@
   width: 14%;
   margin: 13px 26px 0px 95px;
   text-align: center;">
-   <p><span id="playerNo" ></span> Players turn. </p>
+   <p><span id="player" ></span> Player turn. </p>
    <span id="outPut" style="font-size: x-large;"></span> 
    <button id="dice" style="background-color: black;
    border-radius: 17px;
@@ -183,7 +184,8 @@
    margin-left: 62px;
    margin-bottom: 13px;
    font-size: 20px;
-   font-style: normal;">Dice</button>
+   font-style: normal;
+    ">Dice</button>
   </div>
 </body>
 
